--- a/siereweb/web/modulos/consulta/pcs/opd/panelSeleccionSevicios.xhtml
+++ b/siereweb/web/modulos/consulta/pcs/opd/panelSeleccionSevicios.xhtml
@@ -19,7 +19,8 @@ and open the template in the editor.
                                style="font-size: large"
                                var="itemSxv"
 
-
+                               scrollHeight="400"
+                               scrollable="false"
                                paginator="true"
                                alwaysExecuteContents="true"
                                paginatorAlwaysVisible="true"
