--- a/siereweb/web/modulos/parametrizacion/PanelProductoXServicio.xhtml
+++ b/siereweb/web/modulos/parametrizacion/PanelProductoXServicio.xhtml
@@ -162,6 +162,10 @@ and open the template in the editor.
                                     <h:outputText value="#{itemInv.vntProdxsrv.prdId.prdNombre}"
                                                   styleClass="textcolumleft letraOutput"/>
                                 </ace:column>
+                                <ace:column headerText="Conjunto"  style="width: 700px;"  >
+                                    <h:outputText value="#{itemInv.vntProdxsrv.prdId.prdDesc}"
+                                                  styleClass="textcolumleft letraOutput"/>
+                                </ace:column>
                                 <ace:column headerText="Cantidad"  style="width: 100px;"  >
                                     <h:inputText value="#{itemInv.vntProdxsrv.prodxsrvCantidad}" 
 
